tests/NormalTests/paczka1/small_fuzzy/27846241.err
Error in line 3: tWwjin5 S587 1,4
Error in line 6: Le7AlS A463 99,6
